--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
       - Processo de desenvolvimento de software: visao-produto-projeto/processo-de-desenvolvimento-de-software.md
   - Entregas:
       - Unidade 1: entregas\unidade-1.md
-repo_url: https://github.com/mdsreq-fga-unb/2023.2-ArteNaMao
+repo_url: https://github.com/guinuto/2023.2-ArteNaMao
 repo_name: ArteNaMao
 theme:
   name: material
