--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,9 +8,9 @@ nav:
       - Processo de desenvolvimento de software: visao-produto-projeto/processo-de-desenvolvimento-de-software.md
   - Backlog do Produto: backlog-do-produto/backlog-do-produto.md
   - Entregas:
-      - Unidade 1: entregas\unidade-1.md
-      - Unidade 2: entregas\unidade-2.md
-  - Lições Aprendidas: licoes\unidade-2.md
+      - Unidade 1: entregas/unidade-1.md
+      - Unidade 2: entregas/unidade-2.md
+  - Lições Aprendidas: licoes/unidade-2.md
 repo_url: https://github.com/mdsreq-fga-unb/2023.2-ArteNaMao
 repo_name: ArteNaMao
 theme:
