--- a/frontend/ArteNaMao/package.json
+++ b/frontend/ArteNaMao/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.1",
+    "firebase": "^10.6.0",
     "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
