--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - Entregas:
       - Unidade 1: entregas\unidade-1.md
       - Unidade 2: entregas\unidade-2.md
+      - Unidade 2: entregas/unidade-3.md
   - Lições Aprendidas: licoes\unidade-2.md
 repo_url: https://github.com/mdsreq-fga-unb/2023.2-ArteNaMao
 repo_name: ArteNaMao
