--- a/frontend/ArteNaMao/package.json
+++ b/frontend/ArteNaMao/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.11.1",
     "firebase": "^10.6.0",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
