--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ theme:
   language: pt
   favicon: assets/pincel.png
   logo: assets/pincel.png
+  usm: docs/assets/User-Story-Map-Framework-_1_.png
   features:
     - navigation.tabs
     - navigation.tabs.sticky
